weather web using api

--- a/4_Project JS/2_weather_app/styles.css
+++ b/4_Project JS/2_weather_app/styles.css
@@ -1,11 +1,65 @@
 *{
-    margin: 0;
-    padding:0;
-    box-sizing: border-box;
+    margin:0;
+    padding: 0;
+    font-family: sans-serif;
 }
 body{
-   height:100vh;
-   font-family:sans-serif,Arial, Helvetica, sans-serif;
-   background
+    background-color:#121212;
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;   
+}
+.container{
+    background-color:#1e1e1e;
+    padding: 20px;
+    border-radius: 10px;
+    width: 400px;
+    text-align: center;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
 
+}
+.input-container{
+    display: flex;
+   justify-content: space-between;
+   margin-bottom: 10px;
+   align-items: center;
+}
+h1{
+    margin-bottom: 20px;
+    font-size: 40px;
+}
+#city_input{
+    width: 200px;
+    padding:15px 30px;
+    background-color: #121212;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    margin: 10px;
+    outline: none;
+}
+button{
+  height: 40px;
+ border-radius: 5px;
+ padding: 5px;
+ background-color: #121212;
+ color: white;
+ border: none;
+ cursor: pointer;
+   
+}
+button:hover{
+    background-color: blue;
+}
+#weather-info{
+    margin-top: 20px;
+}
+.hidden{
+    display: none;
+}
+#error-message{
+    color: #ff5722;
+    margin-top: 20px;
 }
